# pong-ncurses

./: .gitignore  README.md  pong.py  pyproject.toml  test.py
npong/: __init__.py  __main__.py
